# Wildfire_Evacuations

./: .gitignore  README.md  pyproject.toml
data/: Canadian_Wildfire_Evacuation_Data.csv  Metada_for_Canadian_wildfire_evacuation_data.docx  NFDB_point.csv  fire_db.csv  ~$tada_for_Canadian_wildfire_evacuation_data.docx
notebooks/: 1. data_proprocess.ipynb  2. eda.ipynb  3. logistic.ipynb  3. modelling.ipynb  4. comparison.ipynb  5. spatial.ipynb  6. sensitivty_analysis.ipynb  data_proprocess.ipynb  explore.ipynb
proposal/: proposal.tex
report/: project.tex  references.bib  style.sty
report/parts/: 0_boilerplate.tex  1_abstract.tex  1_introduction.tex  2_introduction.tex  2_modelling.tex  3_logistic.tex  3_modelling.tex  3_results.tex  4_conclusion.tex  4_kernel.tex  4_results.tex  5_conclusion.tex  6_appendix.tex
stan/: logistic_full  logistic_full.stan  logistic_province  logistic_province.stan  logistic_province_prior_sensitivity  logistic_province_prior_sensitivity.stan  logistic_response  logistic_response.stan  minimal  minimal.stan
