[project]
name = "Wildfires"
version = "0.1.0"
description = "Wildfire prediction for STAT405"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=1.0.0",
    "cmdstanpy>=1.3.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
